--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
 :root{
     --background: #F7F7F7;
     --background-button: #2BB673;
-    ;  
+    --background-button-hover: #137948;
 }
 
 html{
@@ -42,11 +42,21 @@ section form{
 }
 section form input{
     margin-left: 5px;
+    margin-bottom: 20px;
     width: 270px;
     height: 40px;
     left: 32px;
     border-radius: 10px;
     border: none;
+    padding-left: 15px;
+}
+
+section form img{
+    transform: translate(70%, 160%);
+}
+
+form img.senha{
+    transform: translate(70%, 200%);
 }
 
 section form label{
@@ -56,6 +66,11 @@ form .submit{
     background-color: var(--background-button);
     color: #FFFFFF;
     cursor: pointer;
+    border-left: 3px solid green;
+}
+form .submit:hover{
+    background: var(--background-button-hover);
+    transition: all .7s;
 }
 span.span_bold{
     font-weight: bold;
