--- a/src/styles/cadastro.css
+++ b/src/styles/cadastro.css
@@ -50,16 +50,21 @@ section form input{
     padding-left: 15px;
     border: none;
 }
-
-section form img{
-    transform: translate(70%, 150%);
+section form input:hover{
+    border: none;
+    border-bottom: 3px solid green;
+    transition: all .3s;
 }
 
+
+form img.user{
+    transform: translate(-530%, 170%);
+}
 form img.senha{
-    transform: translate(70%, 200%);
+    transform: translate(-230%, 260%);
 }
 form img.email{
-    transform: translate(70%, 160%);
+    transform: translate(-230%, 185%);
 }
 section form label{
     font-weight: bold;
