--- a/src/styles/cadastro.css
+++ b/src/styles/cadastro.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
     --background: #F7F7F7;
@@ -13,6 +14,7 @@
 
 html{
     background-color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
 }
 body{
     background-color: var(--background);
@@ -22,9 +24,11 @@ div.header{
     margin: auto;
     padding-top: 40px;
     text-align: center;
+    margin-bottom: 25px;
 }
 h2{
-    margin-left: -100px;
+    font-weight: 600;
+    margin-bottom: 20px;
 }
 input, label{
     text-indent: 20px;
@@ -39,6 +43,9 @@ section{
 section form{
     display: flex;
     flex-direction: column;
+}
+form label{
+    margin-bottom: 5px;
 }
 section form input{
     margin-left: 5px;
@@ -58,17 +65,18 @@ section form input:hover{
 
 
 form img.user{
-    transform: translate(-530%, 170%);
+    transform: translate(-590%, 170%);
 }
 form img.senha{
-    transform: translate(-230%, 260%);
+    transform: translate(-270%, 290%);
 }
 form img.email{
-    transform: translate(-230%, 185%);
+    transform: translate(-240%, 220%);
 }
 section form label{
     font-weight: bold;
 }
+
 form .submit{
     background-color: var(--background-button);
     color: #FFFFFF;
@@ -85,4 +93,8 @@ span.span_bold{
 span a{
     color: black;
     cursor: pointer;
+    font-weight: bold;
+}
+label img.seta_entrar{
+    transform: translate(950%, 250%);
 }
