--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,8 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
     --background: #F7F7F7;
     --background-button: #2BB673;
@@ -13,6 +15,7 @@
 
 html{
     background-color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
 }
 body{
     background-color: var(--background);
@@ -22,9 +25,12 @@ div.header{
     margin: auto;
     padding-top: 40px;
     text-align: center;
+    margin-bottom: 25px;
 }
 h2{
+    font-weight: 600;
     margin-left: -190px;
+    margin-bottom: 20px;
 }
 input, label{
     text-indent: 20px;
@@ -39,6 +45,10 @@ section{
 section form{
     display: flex;
     flex-direction: column;
+}
+
+form label{
+    margin-bottom: 5px;
 }
 section form input{
     margin-left: 5px;
@@ -58,10 +68,10 @@ section form input:hover{
 }
 
 form img.senha{
-    transform: translate(-230%, 260%);
+    transform: translate(-270%, 290%);
 }
 form img.email{
-    transform: translate(-230%, 185%);
+    transform: translate(-240%, 220%);
 }
 
 section form label{
@@ -84,4 +94,8 @@ span.span_bold{
 span a{
     color: black;
     cursor: pointer;
+    font-weight: bold;
+}
+label img.seta_entrar{
+    transform: translate(950%, 220%);
 }
