--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,6 +26,7 @@ div.header{
     padding-top: 40px;
     text-align: center;
     margin-bottom: 25px;
+    opacity: .8;
 }
 h2{
     font-weight: 600;
@@ -49,6 +50,7 @@ section form{
 
 form label{
     margin-bottom: 5px;
+    opacity: .8;
 }
 section form input{
     margin-left: 5px;
