--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -14,6 +14,7 @@ div.user{
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    padding-top: 20px;
     margin-bottom: 20px;
 }
 
