button create task criado

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -2,6 +2,8 @@
 
 :root{
     --background: #F7F7F7;
+    --create-task: #2BB673;
+    ---background-hover: #137948;
 }
 
 section{
@@ -13,14 +15,14 @@ section{
 }
 
 div.user{
-    display: flex;
     height: 80px;
+    display: flex;
     justify-content: center;
     flex-direction: row;
     align-items: center;
     padding-top: 20px;
     margin-bottom: 20px;
-    gap: 40px;
+    gap: 10px;
 }
 
 div.user p{
@@ -29,6 +31,23 @@ div.user p{
 
 div.user img{
     width: 20px;
+}
+button#create-task{
+    background-color: var(--create-task);
+    border: none;
+    height: 40px;
+    width: 130px;
+    border-radius: 25px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+button#create-task:hover{
+    background-color: var(---background-hover);
+}
+
+div.create-task{
+
 }
 section div#accordion{
     width: 100%;
@@ -70,7 +89,6 @@ section div{
     display: flex;
     flex-direction: column;
     align-items: center;
-    
     background-color: var(--background
     );
 }
@@ -79,7 +97,7 @@ section ul{
 }
 section ul li{
     padding-left: 10px;
-    width: 250px;
+    width: 100%;
     height: 40px;
     font-size: 14px;
     margin-bottom: 5px;
