Atualização da cor do titulo das sessoes das tarefas

--- a/src/styles/tasks2.css
+++ b/src/styles/tasks2.css
@@ -54,6 +54,7 @@ section.body-style{
 }
 
 .title-section{
+    color: #F7F7F7;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 8px;
