--- a/src/styles/cadastro.css
+++ b/src/styles/cadastro.css
@@ -68,6 +68,7 @@ section form input{
     border-radius: 10px;
     padding-left: 15px;
     border: none;
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.178));
 }
 section form input:hover{
     border: none;
