--- a/src/styles/MediaQuery.css
+++ b/src/styles/MediaQuery.css
@@ -27,6 +27,7 @@ Grandes telas: Acima de 1200px
     section form input{
         margin-left: 15px;
         width: 80%;
+        height: 50px;
     }
 }
 @media screen and (min-width: 401px) and (max-width: 500px){/*celular*/
@@ -49,6 +50,7 @@ Grandes telas: Acima de 1200px
     section form input{
         margin-left: 15px;
         width: 400px;
+        height: 50px;
     }
 }
 
